--- a/front-end/index.html
+++ b/front-end/index.html
@@ -9,5 +9,6 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script type="text/javascript" src="/https://w.soundcloud.com/player/api.js"></script>
   </body>
 </html>
